--- a/alan-news-client/package.json
+++ b/alan-news-client/package.json
@@ -8,8 +8,7 @@
     "lint": "vue-cli-service lint",
     "dev": "vite",
     "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write",
-    "build:css": "tailwindcss build -i ./src/assets/styles/app.css -o ./src/assets/styles/main.css"
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
@@ -29,13 +28,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.4",
     "vite": "^3.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
