--- a/alan-news-client/package.json
+++ b/alan-news-client/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@mdi/font": "5.9.55",
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "4",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
@@ -35,6 +38,7 @@
     "vite": "^3.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-store": "~0.0.7",
     "vue-cli-plugin-vuetify": "~2.5.8"
   },
   "eslintConfig": {
