--- a/alan-news-server/src/main/resources/application.properties
+++ b/alan-news-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PORT SERVER
 server.port=8080
 # Connect Mysql v-8.0.30
-spring.datasource.url=jdbc:mysql://localhost:3306/alan-news?useUnicode=true\
+spring.datasource.url=jdbc:mysql://localhost:3306/alan_news?useUnicode=true\
   &useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
