--- a/alan-news-client/package.json
+++ b/alan-news-client/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@mdi/font": "5.9.55",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "4",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.2",
@@ -35,6 +37,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.8.4",
+    "vee-validate": "^4.7.4",
     "vite": "^3.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
